# api-len

./: README.md  pyproject.toml
api-len/routers/v1/: receivers.py
api-len/schemas/: receivers.py
apilen/models/: __init__.py  receiver_model.py
apilen/routers/v1/: customer_router.py  delivery_staff_router.py  parcel_router.py  station_router.py  vehicle_router.py
scripts/: run-api
