[project]
name = "api-len"
version = "0.1.0"
description = ""
authors = [
    {name = "krahyor",email = "gimgim611@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
